--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
-<body>
-    <!-- Google Calendar -->
-    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FNew_York&src=Zm9vZGZyZWU0MTJAZ21haWwuY29t&color=%23039BE5" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<div class="full-container">
+			<!-- Google Calendar -->
+			<iframe
+				src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FNew_York&src=Zm9vZGZyZWU0MTJAZ21haWwuY29t&color=%23039BE5"
+				style="border: solid 1px #777"
+				width="800"
+				height="600"
+				frameborder="0"
+				scrolling="no"
+			></iframe>
+			<div class="title-container">
+				<h1>Panther Plate Saver</h1>
+				<p>Find the Pitt events that provide free food!</p>
+			</div>
+		</div>
 
-    <!-- Form For Submission  -->
-    <form action="/signup" method="post" id="signup"> 
-    </form>
-
-</head>
-</body>
+		<!-- Form For Submission  -->
+		<form action="/signup" method="post" id="signup"></form>
+	</body>
 </html>
