Added sidebar and some styles yo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<link rel="stylesheet" href="/styles.css" />
+		<title>Panther Plate Saver</title>
 	</head>
 	<body>
 		<div class="full-container">
@@ -17,9 +18,58 @@
 				frameborder="0"
 				scrolling="no"
 			></iframe>
-			<div class="title-container">
-				<h1>Panther Plate Saver</h1>
-				<p>Find the Pitt events that provide free food!</p>
+			<div class="sidebar">
+				<div class="title-container">
+					<h1>Panther Plate Saver</h1>
+					<p>Find the Pitt events that provide free food!</p>
+					<div class="button-row">
+						<button class="vegan">Vegan Friendly 🥑</button>
+						<button class="pizza">Pizza and Soda 🍕</button>
+					</div>
+				</div>
+				<div class="events-container">
+					<h2>Upcoming Events with Free Food</h2>
+					<div class="event">
+						<img src="/imgs/misa.jpg" alt="" />
+						<div class="event-desc">
+							<h3>#MISGO</h3>
+							<p>
+								We will be networking with Pitt alumni. Join us on 3/31/2023 at
+								2pm
+							</p>
+							<a href="">RSVP</a>
+						</div>
+						<ul class="foods">
+							<li>Pizza</li>
+							<li>Soda</li>
+							<li>Chips</li>
+						</ul>
+					</div>
+					<div class="event">
+						<img src="/imgs/active.jpg" alt="" />
+						<div class="event-desc">
+							<h3>Active Minds</h3>
+							<p>We will be networking with Pitt alumni.</p>
+						</div>
+						<ul class="foods">
+							<li>Pizza</li>
+							<li>Soda</li>
+							<li>Chips</li>
+						</ul>
+					</div>
+					<div class="event">
+						<img src="/imgs/adverse.jpeg" alt="" />
+						<div class="event-desc">
+							<h3>ADDverse</h3>
+							<p>We will be networking with Pitt alumni.</p>
+						</div>
+						<ul class="foods">
+							<li>Pizza</li>
+							<li>Soda</li>
+							<li>Chips</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
 
