modified date and time entries

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div class="field">
 					<label for="date">Date:</label>
 					<input
-						type="text"
+						type="date"
 						id="date"
 						name="date"
 						placeholder="What day will the event be(enter in form 01/01/2023)"
@@ -116,7 +116,7 @@
 				<div class="field">
 					<label for="time">Time:</label>
 					<input
-						type="text"
+						type="time"
 						id="time"
 						name="time"
 						placeholder="What time is the event going to be taking place at"
