Changed the form to a google form

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<!-- Google Calendar -->
 			<iframe
 				src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FNew_York&src=Zm9vZGZyZWU0MTJAZ21haWwuY29t&color=%23039BE5"
-				style="border: solid 1px #777"
+				style="border: solid 1px #0951d8"
 				width="800"
 				height="600"
 				frameborder="0"
@@ -75,7 +75,8 @@
 		</div>
 
 		<!-- Form For Submission  -->
-		<div class="container">
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSckGN4Dn6oEGv95FSraiGBzNqYnapjsUdpiGjiWFTS4bL4NNw/viewform?embedded=true" width="640" height="1653" frameborder="" marginheight="0" marginwidth="0">Loading…</iframe>
+		<!-- <div class="container">
 			<form action="signup.html" method="post" id="signup">
 				<h1>Add Your Club's Event</h1>
 				<div class="field">
@@ -87,9 +88,9 @@
 						placeholder="Enter your club's name"
 					/>
 					<small></small>
-				</div>
+				</div> -->
 				<!-- Email Field -->
-				<div class="field">
+				<!-- <div class="field">
 					<label for="email">Email:</label>
 					<input
 						type="text"
@@ -98,68 +99,68 @@
 						placeholder="Enter a valid email address"
 					/>
 					<small></small>
-				</div>
+				</div> -->
 
 				<!-- Date of the event -->
-				<div class="field">
+				<!-- <div class="field">
 					<label for="date">Date:</label>
 					<input
 						type="date"
 						id="date"
 						name="date"
-						placeholder="What day will the event be(enter in form 01/01/2023)"
+						placeholder="What date is the event"
 					/>
 					<small></small>
-				</div>
+				</div> -->
 
 				<!-- Time of the event -->
-				<div class="field">
+				<!-- <div class="field">
 					<label for="time">Time:</label>
 					<input
 						type="time"
 						id="time"
 						name="time"
-						placeholder="What time is the event going to be taking place at"
+						placeholder="What time is the event"
 					/>
 					<small></small>
-				</div>
+				</div> -->
 
 				<!-- Location of the event -->
-				<div class="field">
+				<!-- <div class="field">
 					<label for="loc">Loc:</label>
 					<input
 						type="text"
 						id="loc"
 						name="loc"
-						placeholder="Where will the event be located"
+						placeholder="Where is the event"
 					/>
 					<small></small>
-				</div>
+				</div> -->
 				<!-- Food at the event -->
-				<div class="food">
+				<!-- <div class="food">
 					<label for="food">Food:</label>
 					<input
 						type="text"
 						id="food"
 						name="food"
-						placeholder="What food will be provided at the event"
+						placeholder="Describe the food"
 					/>
 					<small></small>
-				</div>
+				</div> -->
 				<!-- Vegan, Gluten, etc. -->
-				<div class="food">
+				<!-- <div class="food">
 					<label for="friendly">Friendly:</label>
 					<input
 						type="text"
 						id="friendly"
 						name="friendly"
-						placeholder="Specify if your food is vegan friendly, gluten friendly, etc"
+						placeholder="Is the food vegan friendly, gluten friendly, etc"
 					/>
 					<small></small>
-				</div>
+				</div> -->
 
 				<!-- Description of the event -->
-				<div class="field">
+				<!-- <div class="field">
 					<label for="desc">Desc:</label>
 					<input
 						type="text"
@@ -170,13 +171,12 @@
 					<small></small>
 				</div>
 				<div class="field">
-					<button type="submit" class="full">Subscribe</button>
+					<button type="submit" cslass="full">Submit</button>
 				</div>
 			</form>
-		</div>
+		</div> -->
 		<script src="script.js"></script>
 		=======
-		<!-- Form For Submission  -->
-		<form action="/signup" method="post" id="signup"></form>
+	
 	</body>
 </html>
