--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
 			<iframe
 				src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FNew_York&src=Zm9vZGZyZWU0MTJAZ21haWwuY29t&color=%23039BE5"
 				style="border: solid 1px #777"
-				width="800"
-				height="600"
 				frameborder="0"
 				scrolling="no"
 			></iframe>
 			<div class="sidebar">
 				<div class="title-container">
 					<h1>Panther Plate Saver</h1>
-					<p>Find the Pitt events that provide free food!</p>
+					<p class="title-desc">Find the Pitt events that provide free food!</p>
 					<div class="button-row">
-						<button class="vegan">Vegan Friendly 🥑</button>
-						<button class="pizza">Pizza and Soda 🍕</button>
+						<button class="vegan"><span>Vegan Friendly 🥑</span></button>
+						<button class="pizza"><span>Pizza and Soda 🍕</span></button>
 					</div>
 				</div>
 				<div class="events-container">
@@ -35,9 +33,9 @@
 							<h3>#MISGO</h3>
 							<p>
 								We will be networking with Pitt alumni. Join us on 3/31/2023 at
-								2pm
+								2pm WPU 224
 							</p>
-							<a href="">RSVP</a>
+							<a href="">Join this event!</a>
 						</div>
 						<ul class="foods">
 							<li>Pizza</li>
@@ -49,7 +47,11 @@
 						<img src="/imgs/active.jpg" alt="" />
 						<div class="event-desc">
 							<h3>Active Minds</h3>
-							<p>We will be networking with Pitt alumni.</p>
+							<p>
+								We will be having an open town hall to discuss mental health on
+								college campuses. Join us on 3/31/2023 at 2pm WPU 224
+							</p>
+							<a href="">Join this event!</a>
 						</div>
 						<ul class="foods">
 							<li>Pizza</li>
@@ -62,6 +64,7 @@
 						<div class="event-desc">
 							<h3>ADDverse</h3>
 							<p>We will be networking with Pitt alumni.</p>
+							<p>Please contact HES77@pitt.edu to RSVP</p>
 						</div>
 						<ul class="foods">
 							<li>Pizza</li>
