--- a/index.html
+++ b/index.html
@@ -42,25 +42,26 @@
 						<img src="/imgs/steel.png" alt="" />
 						<div class="event-desc">
 							<h3>Steelhacks 2023</h3>
-							<p>
-								We will be networking with Pitt alumni. Join us on 3/25/2023 at
+							<p>Students from around the Pittsburgh area and beyond come together to hack and make cool stuff. Join us on 3/25/2023 at
 								5pm Information Science Building, 3rd floor
 							</p>
 							<a href="">Join this event!</a>
 						</div>
 						<ul class="foods">
-							<li>Pizza</li>
-							<li>Soda</li>
-							<li>Chips</li>
+							<li>Bagels</li>
+							<li>Donuts</li>
+							<li>Pasta</li>
+                            <li>Breadsticks</li>
+                            <li>Chips</li>
+                            <li>Cookies</li>
 						</ul>
 					</div>
 					<div class="event">
-						<img src="/imgs/active.jpg" alt="" />
+						<img src="/imgs/eve.jpg" alt="" />
 						<div class="event-desc">
-							<h3>Active Minds</h3>
+							<h3>Eve Then, Us Now</h3>
 							<p>
-								We will be having an open town hall to discuss mental health on
-								college campuses. Join us on 3/31/2023 at 2pm WPU 224
+								Meet and talk with the artist-scholars, learn more about the OUR, and enjoy some snacks. Join us on 3/27/2023 at the Cathedral of Learning B-50
 							</p>
 							<a href="">Join this event!</a>
 						</div>
@@ -71,16 +72,18 @@
 						</ul>
 					</div>
 					<div class="event">
-						<img src="/imgs/adverse.jpeg" alt="" />
+						<img src="/imgs/rainbow.jpg" alt="" />
 						<div class="event-desc">
-							<h3>ADDverse</h3>
-							<p>We will be networking with Pitt alumni on 4/1/2023</p>
-							<p>Please contact pop77@pitt.edu to RSVP</p>
+							<h3>Slay Cafe</h3>
+							<p>Join the Rainbow Alliance  on 5/5/2023 to celebrate pride week at 10am in the WPU</p>
+							<p>Follow @rainbowatpitt on Instagram</p>
 						</div>
 						<ul class="foods">
 							<li>Pizza</li>
 							<li>Soda</li>
 							<li>Chips</li>
+                            <li>Cake</li>
+                            <li>Cookies</li>
 						</ul>
 					</div>
                     <a href="https://forms.gle/JGuJUUEY3aYg5bpY7" class="register"
