--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 						<img src="/imgs/steel.png" alt="" />
 						<div class="event-desc">
 							<h3>Steelhacks 2023</h3>
-							<p>Students from around the Pittsburgh area and beyond come together to hack and make cool stuff. Join us on 3/25/2023 at
+							<p>
+								Students from around the Pittsburgh area and beyond come
+								together to hack and make cool stuff. Join us on 3/25/2023 at
 								5pm Information Science Building, 3rd floor
 							</p>
 							<a href="">Join this event!</a>
@@ -51,9 +53,9 @@
 							<li>Bagels</li>
 							<li>Donuts</li>
 							<li>Pasta</li>
-                            <li>Breadsticks</li>
-                            <li>Chips</li>
-                            <li>Cookies</li>
+							<li>Breadsticks</li>
+							<li>Chips</li>
+							<li>Cookies</li>
 						</ul>
 					</div>
 					<div class="event">
@@ -61,7 +63,9 @@
 						<div class="event-desc">
 							<h3>Eve Then, Us Now</h3>
 							<p>
-								Meet and talk with the artist-scholars, learn more about the OUR, and enjoy some snacks. Join us on 3/27/2023 at the Cathedral of Learning B-50
+								Meet and talk with the artist-scholars, learn more about the
+								OUR, and enjoy some snacks. Join us on 3/27/2023 at the
+								Cathedral of Learning B-50
 							</p>
 							<a href="">Join this event!</a>
 						</div>
@@ -75,124 +79,26 @@
 						<img src="/imgs/rainbow.jpg" alt="" />
 						<div class="event-desc">
 							<h3>Slay Cafe</h3>
-							<p>Join the Rainbow Alliance  on 5/5/2023 to celebrate pride week at 10am in the WPU</p>
+							<p>
+								Join the Rainbow Alliance on 5/5/2023 to celebrate pride week at
+								10am in the WPU
+							</p>
 							<p>Follow @rainbowatpitt on Instagram</p>
 						</div>
 						<ul class="foods">
 							<li>Pizza</li>
 							<li>Soda</li>
 							<li>Chips</li>
-                            <li>Cake</li>
-                            <li>Cookies</li>
+							<li>Cake</li>
+							<li>Cookies</li>
 						</ul>
 					</div>
-                    <a href="https://forms.gle/JGuJUUEY3aYg5bpY7" class="register"
-			>Add an event</a
+					<a href="https://forms.gle/JGuJUUEY3aYg5bpY7" class="register"
+						>Add an event</a
+					>
 				</div>
 			</div>
 		</div>
-
-		
-		>
-		<!-- <div class="container">
-			<form action="signup.html" method="post" id="signup">
-				<h1>Add Your Club's Event</h1>
-				<div class="field">
-					<label for="name">Name:</label>
-					<input
-						type="text"
-						id="name"
-						name="name"
-						placeholder="Enter your club's name"
-					/>
-					<small></small>
-				</div> -->
-		<!-- Email Field -->
-		<!-- <div class="field">
-					<label for="email">Email:</label>
-					<input
-						type="text"
-						id="email"
-						name="email"
-						placeholder="Enter a valid email address"
-					/>
-					<small></small>
-				</div> -->
-
-		<!-- Date of the event -->
-		<!-- <div class="field">
-					<label for="date">Date:</label>
-					<input
-						type="date"
-						id="date"
-						name="date"
-						placeholder="What date is the event"
-					/>
-					<small></small>
-				</div> -->
-
-		<!-- Time of the event -->
-		<!-- <div class="field">
-					<label for="time">Time:</label>
-					<input
-						type="time"
-						id="time"
-						name="time"
-						placeholder="What time is the event"
-					/>
-					<small></small>
-				</div> -->
-
-		<!-- Location of the event -->
-		<!-- <div class="field">
-					<label for="loc">Loc:</label>
-					<input
-						type="text"
-						id="loc"
-						name="loc"
-						placeholder="Where is the event"
-					/>
-					<small></small>
-				</div> -->
-		<!-- Food at the event -->
-		<!-- <div class="food">
-					<label for="food">Food:</label>
-					<input
-						type="text"
-						id="food"
-						name="food"
-						placeholder="Describe the food"
-					/>
-					<small></small>
-				</div> -->
-		<!-- Vegan, Gluten, etc. -->
-		<!-- <div class="food">
-					<label for="friendly">Friendly:</label>
-					<input
-						type="text"
-						id="friendly"
-						name="friendly"
-						placeholder="Is the food vegan friendly, gluten friendly, etc"
-					/>
-					<small></small>
-				</div> -->
-
-		<!-- Description of the event -->
-		<!-- <div class="field">
-					<label for="desc">Desc:</label>
-					<input
-						type="text"
-						id="desc"
-						name="desc"
-						placeholder="Describe this event"
-					/>
-					<small></small>
-				</div>
-				<div class="field">
-					<button type="submit" cslass="full">Submit</button>
-				</div>
-			</form>
-		</div> -->
 		<script src="script.js"></script>
 	</body>
 </html>
